start passing search query terms from api to db for events
